feat: :sparkles: add subjects

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -12,7 +12,7 @@ const {id, name, img, category} = Astro.props;
 
 <div class="card card-compact h-96 bg-white border shadow-sm">
   <figure>
-    <img src={img} alt="miebro" class="w-full object-cover object-top"/>
+    <img src={img} alt="miebro" class="h-full w-full object-cover object-top"/>
   </figure>
   <div class="card-body">
     <h2 class="card-title text-black">{name}</h2>
