--- a/src/pages/docencia.astro
+++ b/src/pages/docencia.astro
@@ -5,58 +5,204 @@ import Layout from "../components/Layout.astro";
 <Layout>
   <div class="container mx-auto">
     <h2
-      class="text-center py-10 text-5xl text-slate-800 font-merriweather font-medium leading-relaxed container mx-auto"
+      class="text-center pt-10 text-5xl text-slate-800 font-title font-medium leading-relaxed container mx-auto"
     >
-      Docencia
+      Materias
     </h2>
-    <div class="grid md:grid-cols-2">
-      <div
-        class="bg-white border border-gray-200 rounded-lg shadow"
-      >
-      <div class="h-[300px] flex items-center">
-          <a href="#">
+    <p class="text-black pb-5 text-center">
+      En las siguientes ligas podrás tener acceso al material de los cursos,
+      como es el temario, biblografia, presentaciones, lecturas y videos.
+    </p>
+    <div class="grid lg:grid-cols-4 md:grid-cols-2 gap-4 pb-10">
+      <div class="rounded-lg shadow">
+        <div class="h-[300px] flex items-center">
+          <a href="https://www.dropbox.com/sh/d1hlo5hixac3jpn/AABGjHiV5L-yUy04hBbjZw3ta?dl=0" class="h-full w-full">
             <img
-              class="rounded-t-lg"
-              src="Img/Components/LIRFFF-Genero.jpeg"
+              class="rounded-t-lg h-full w-full object-cover"
+              src="Img/Components/LIRFFF-Fluidos.jpg"
               alt=""
             />
           </a>
-      </div>
-        <div class="p-5 bg-blue-500">
-          <a href="#">
-            <h5
-              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-            >
-              Noteworthy technology acquisitions 2021
+        </div>
+        <div
+          class="p-5 bg-primary min-h-[400px] flex flex-col justify-between text-white"
+        >
+          <a href="https://www.dropbox.com/sh/d1hlo5hixac3jpn/AABGjHiV5L-yUy04hBbjZw3ta?dl=0">
+            <h5 class="text-2xl font-bold tracking-tight font-title underline">
+              Propiedades de los Fluidos Petroleros
             </h5>
+            <p>Licenciatura</p>
           </a>
-          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-            Here are the biggest enterprise technology acquisitions of 2021 so
-            far, in reverse chronological order.
+          <p class="font-normal">
+            El alumno comprenderá el comportamiento de los diferentes fluidos
+            que se encuentra en un yacimiento petrolero,al variar sus
+            condiciones de presión y temperatura
           </p>
-          <a
-            href="#"
-            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
-            Read more
-            <svg
-              class="w-3.5 h-3.5 ml-2"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 10"
+          <div>
+            <a
+              href="https://www.dropbox.com/sh/d1hlo5hixac3jpn/AABGjHiV5L-yUy04hBbjZw3ta?dl=0"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-primary bg-info rounded-lg hover:bg-yellow-300"
             >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-            </svg>
-          </a>
+              Accede ahora
+              <svg
+                class="w-3.5 h-3.5 ml-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
-
+      <div class="rounded-lg shadow">
+        <div class="h-[300px] flex items-center">
+          <a href="https://www.dropbox.com/sh/s5zcc6y9ofw92ki/AACtvBO9no8C8N8qSHw2Ds2Ea?dl=0" class="h-full w-full">
+            <img
+              class="rounded-t-lg h-full w-full object-cover"
+              src="Img/Components/LIRFFF-Fluidos-Petroleros.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div
+          class="p-5 bg-primary min-h-[400px] flex flex-col justify-between text-white"
+        >
+          <a href="https://www.dropbox.com/sh/s5zcc6y9ofw92ki/AACtvBO9no8C8N8qSHw2Ds2Ea?dl=0">
+            <h5 class="text-2xl font-bold tracking-tight font-title underline">
+              Temas Selectos de Ingeniería Petrolera
+            </h5>
+            <p>Licenciatura</p>
+          </a>
+          <p class="font-normal">
+            El alumno adquirirá y aplicará los conocimientos correspondientes a temas de Ingeniería Petrolera que se consideran de actualidad y necesarios para satisfacer los requerimientos de los sectores productivos y de servicios
+          </p>
+          <div>
+            <a
+              href="https://www.dropbox.com/sh/s5zcc6y9ofw92ki/AACtvBO9no8C8N8qSHw2Ds2Ea?dl=0"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-primary bg-info rounded-lg hover:bg-yellow-300"
+            >
+              Accede ahora
+              <svg
+                class="w-3.5 h-3.5 ml-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="rounded-lg shadow">
+        <div class="h-[300px] flex items-center">
+          <a href="https://www.dropbox.com/sh/m6ypdkwr3h4psp8/AAARKn4BcSHg-LPCRM4pBz_aa?dl=0" class="h-full w-full">
+            <img
+              class="rounded-t-lg h-full w-full object-cover"
+              src="Img/Components/LIRFFF-Libros.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div
+          class="p-5 bg-primary min-h-[400px] flex flex-col justify-between text-white"
+        >
+          <a href="https://www.dropbox.com/sh/m6ypdkwr3h4psp8/AAARKn4BcSHg-LPCRM4pBz_aa?dl=0">
+            <h5 class="text-2xl font-bold tracking-tight font-title underline">
+              Termodinámica y Fisicoquímica de los Hidrocarburos
+            </h5>
+            <p>Licenciatura</p>
+          </a>
+          <p class="font-normal">
+            El alumno adquirirá conocimientos fundamentales para modelar el equilibrio de fases de mezclas de hidrocarburos. Reconocerá la importancia de las pruebas de laboratorio para la estimación de las propiedades físicas y químicas de los hidrocarburos
+          </p>
+          <div>
+            <a
+              href="https://www.dropbox.com/sh/m6ypdkwr3h4psp8/AAARKn4BcSHg-LPCRM4pBz_aa?dl=0"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-primary bg-info rounded-lg hover:bg-yellow-300"
+            >
+              Accede ahora
+              <svg
+                class="w-3.5 h-3.5 ml-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="rounded-lg shadow">
+        <div class="h-[300px] flex items-center">
+          <a href="https://www.dropbox.com/sh/7vams7dnxsbk117/AAC3w5EBf7Cc_wc8G2wbJ0Pra?dl=0" class="h-full w-full">
+            <img
+              class="rounded-t-lg h-full w-full object-cover"
+              src="Img/Components/LIRFFF-Termometro.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div
+          class="p-5 bg-primary min-h-[400px] flex flex-col justify-between text-white"
+        >
+          <a href="https://www.dropbox.com/sh/7vams7dnxsbk117/AAC3w5EBf7Cc_wc8G2wbJ0Pra?dl=0">
+            <h5 class="text-2xl font-bold tracking-tight font-title underline">
+              Propiedades de los Fluidos Petroleros
+            </h5>
+            <p>Posgrado</p>
+          </a>
+          <p class="font-normal">
+            El alumno comprenderá el comportamiento de los diferentes fluidos
+            que se encuentra en un yacimiento petrolero,al variar sus
+            condiciones de presión y temperatura
+          </p>
+          <div>
+            <a
+              href="https://www.dropbox.com/sh/7vams7dnxsbk117/AAC3w5EBf7Cc_wc8G2wbJ0Pra?dl=0"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-primary bg-info rounded-lg hover:bg-yellow-300"
+            >
+              Accede ahora
+              <svg
+                class="w-3.5 h-3.5 ml-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
+    <p class="text-black pb-5">Si tienes problemas para tener acceso a la liga escribe un correo a: paulinagomora@gmail.com</p>
   </div>
 </Layout>
