--- a/src/pages/miembros.astro
+++ b/src/pages/miembros.astro
@@ -25,7 +25,7 @@ import Apoyo from "../../utils/apoyo.json";
           />
         </div>
         <div class="flex flex-col justify-between pt-5 lg:pt-0">
-          <div class="flex flex-col lg:justify-between lg:h-32 text-black lg:text-white text-center">
+          <div class="flex flex-col lg:justify-between lg:h-32 text-black lg:text-white text-center lg:text-left">
             <h1 class="text-5xl font-extrabold">Ana Paulina Gómora Figueroa</h1>
             <p class="underline decoration-2">Profesora titular de Tiempo completo.</p>
           </div>
@@ -49,7 +49,7 @@ import Apoyo from "../../utils/apoyo.json";
           }
         </div>
         <p class="bg-primary text-info text-6xl font-title min-h-[150px] flex justify-center items-center my-10">Ex - Alumnos</p>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 w-11/12 mx-auto">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-11/12 mx-auto">
           {
             Ex_Alumnos.map((ex_alumno) => (
               <Card
@@ -62,7 +62,7 @@ import Apoyo from "../../utils/apoyo.json";
           }
         </div>
         <p class="bg-primary text-info text-6xl font-title min-h-[150px] flex justify-center items-center my-10">Apoyo Tecnico y Logistico</p>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 w-11/12 mx-auto">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-11/12 mx-auto">
           {
             Apoyo.map((apoyo) => (
               <Card
