feat: :bookmark: add final sections

--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -13,7 +13,7 @@
       <div class="flex-none md:hidden">
         <p class="pr-4">Menú</p>
         <label for="my-drawer-3" aria-label="open sidebar" class="w-fit">
-          <i class="fa-solid fa-bars hover:cursor-pointer hover:scale-110"></i>
+          <i class="fa-solid fa-bars fa-xl hover:cursor-pointer hover:scale-110"></i>
         </label>
       </div>
       <div class="flex-none hidden md:block">
