--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -6,11 +6,14 @@ import "../styles/global.css";
 ---
 
 <!doctype html>
-<html lang="es" data-theme="business">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Laboratorio de interacción roca-fluido y fluido-fluido - (LIRFFF). Aseguramiento de flujo, recuperación mejorada de hidrocarburos, evaluación de rocas ígneas mexicanas.">
     <title>LirfffWeb</title>
+    <link rel="shortcut icon" href="../../public/favicon.ico">
+
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
