--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from "../components/Layout.astro";
     <div class="md:col-span-2 lg:col-span-4  max-h-[550px]">
       <img
         class="h-full w-full object-cover object-bottom"
-        src="/Img/Home/LIRFFF-Grupal.jpg"
+        src="Img/Home/LIRFFF-Grupal.jpg"
         alt=""
       />
     </div>
@@ -17,7 +17,7 @@ import Layout from "../components/Layout.astro";
     <div class="md:col-span-2">
       <img
         class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic2.jpg"
+        src="Img/Home/LIRFFF-Mosaic2.jpg"
         alt=""
       />
     </div>
@@ -31,7 +31,7 @@ import Layout from "../components/Layout.astro";
     <div class="md:order-2">
       <img
         class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic4.jpg"
+        src="Img/Home/LIRFFF-Mosaic4.jpg"
         alt=""
       />
     </div>
@@ -45,7 +45,7 @@ import Layout from "../components/Layout.astro";
     <div class="md:order-3">
       <img
         class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic3.jpg"
+        src="Img/Home/LIRFFF-Mosaic3.jpg"
         alt=""
       />
     </div>
@@ -59,7 +59,7 @@ import Layout from "../components/Layout.astro";
     <div class="md:order-6 lg:order-5">
       <img
         class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic1.jpg"
+        src="Img/Home/LIRFFF-Mosaic1.jpg"
         alt=""
       />
     </div>
