--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -5,7 +5,7 @@
     <div
       class="w-full navbar text-white justify-between container mx-auto"
     >
-      <a href="/"
+      <a href=""
         class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800"
       >
         LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800">3</sup>
@@ -19,12 +19,12 @@
       <div class="flex-none hidden md:block">
         <ul class="menu-horizontal [&>li>a]:inline-block [&>li>a]:px-4">
           <!-- Navbar menu content here -->
-          <li><a href="/">inicio</a></li>
-          <li><a href="/publicaciones">Publicaciones</a></li>
-          <li><a href="/miembros">Miembros</a></li>
-          <li><a href="/docencia">Docencia</a></li>
-          <li><a href="/divulgacion">Divulgación</a></li>
-          <li><a href="/contacto">Contacto</a></li>
+          <li><a href="">inicio</a></li>
+          <li><a href="publicaciones">Publicaciones</a></li>
+          <li><a href="miembros">Miembros</a></li>
+          <li><a href="docencia">Docencia</a></li>
+          <li><a href="divulgacion">Divulgación</a></li>
+          <li><a href="contacto">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -36,12 +36,12 @@
       class="w-80 min-h-full [&>li>a]:inline-block flex flex-col justify-evenly flex-1 text-center bg-base-200"
     >
       <!-- Sidebar content here -->
-      <li><a href="/">inicio</a></li>
-      <li><a href="/publicaciones">Publicaciones</a></li>
-      <li><a href="/miembros">Miembros</a></li>
-      <li><a href="/docencia">Docencia</a></li>
-      <li><a href="/divulgacion">Divulgacion</a></li>
-      <li><a href="/contacto">Contacto</a></li>
+      <li><a href="">inicio</a></li>
+      <li><a href="publicaciones">Publicaciones</a></li>
+      <li><a href="miembros">Miembros</a></li>
+      <li><a href="docencia">Docencia</a></li>
+      <li><a href="divulgacion">Divulgacion</a></li>
+      <li><a href="contacto">Contacto</a></li>
     </ul>
   </div>
 </div>
