fix: :bug: agrega cambios para echar a andar el routing

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Drawer from "./Drawer.astro";
-import Footer from "./Footer.astro";
-import Header from "./Header.astro";
-import "../styles/global.css";
+import Drawer from './Drawer.astro';
+import Footer from './Footer.astro';
+import Header from './Header.astro';
+import '../styles/global.css';
 ---
 
 <!doctype html>
@@ -10,10 +10,12 @@ import "../styles/global.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Laboratorio de interacción roca-fluido y fluido-fluido - (LIRFFF). Aseguramiento de flujo, recuperación mejorada de hidrocarburos, evaluación de rocas ígneas mexicanas.">
+    <meta
+      name="description"
+      content="Laboratorio de interacción roca-fluido y fluido-fluido - (LIRFFF). Aseguramiento de flujo, recuperación mejorada de hidrocarburos, evaluación de rocas ígneas mexicanas."
+    />
     <title>LirfffWeb</title>
-    <link rel="shortcut icon" href="../../public/favicon.ico">
-
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
