--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,30 +1,47 @@
+---
+const BASE_URL = import.meta.env.BASE_URL;
+
+const LINKS = [
+  { name: 'Inicio', url: `${BASE_URL}/` },
+  { name: 'Publicaciones', url: `${BASE_URL}/publicaciones` },
+  { name: 'Miembros', url: `${BASE_URL}/miembros` },
+  { name: 'Docencia', url: `${BASE_URL}/docencia` },
+  { name: 'Divulgación', url: `${BASE_URL}/divulgacion` },
+  { name: 'Contacto', url: `${BASE_URL}/contacto` },
+];
+---
+
 <div class="drawer z-40 font-exo bg-secondary sticky top-0 shadow-xl">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content flex flex-col">
     <!-- Navbar -->
-    <div
-      class="w-full navbar text-white justify-between container mx-auto"
-    >
-      <a href=""
+    <div class="w-full navbar text-white justify-between container mx-auto">
+      <a
+        href=""
         class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800"
       >
-        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800">3</sup>
+        LIRF<sup
+          class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800"
+          >3</sup
+        >
       </a>
       <div class="flex-none md:hidden">
         <p class="pr-4">Menú</p>
         <label for="my-drawer-3" aria-label="open sidebar" class="w-fit">
-          <i class="fa-solid fa-bars fa-xl hover:cursor-pointer hover:scale-110"></i>
+          <i class="fa-solid fa-bars fa-xl hover:cursor-pointer hover:scale-110"
+          ></i>
         </label>
       </div>
       <div class="flex-none hidden md:block">
         <ul class="menu-horizontal [&>li>a]:inline-block [&>li>a]:px-4">
           <!-- Navbar menu content here -->
-          <li><a href="">inicio</a></li>
-          <li><a href="publicaciones">Publicaciones</a></li>
-          <li><a href="miembros">Miembros</a></li>
-          <li><a href="docencia">Docencia</a></li>
-          <li><a href="divulgacion">Divulgación</a></li>
-          <li><a href="contacto">Contacto</a></li>
+          {
+            LINKS.map(({ name, url }) => (
+              <li>
+                <a href={url}>{name}</a>
+              </li>
+            ))
+          }
         </ul>
       </div>
     </div>
@@ -36,12 +53,13 @@
       class="w-80 min-h-full [&>li>a]:inline-block flex flex-col justify-evenly flex-1 text-center bg-base-200"
     >
       <!-- Sidebar content here -->
-      <li><a href="">inicio</a></li>
-      <li><a href="publicaciones">Publicaciones</a></li>
-      <li><a href="miembros">Miembros</a></li>
-      <li><a href="docencia">Docencia</a></li>
-      <li><a href="divulgacion">Divulgacion</a></li>
-      <li><a href="contacto">Contacto</a></li>
+      {
+        LINKS.map(({ name, url }) => (
+          <li>
+            <a href={url}>{name}</a>
+          </li>
+        ))
+      }
     </ul>
   </div>
 </div>
@@ -52,7 +70,7 @@
   }
   a:after {
     display: block;
-    content: "";
+    content: '';
     border-bottom: solid 3px #ecb365;
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
